tests/fail/match_range_invalid_bound.stderr
error[E0406]: Range start value (10) cannot be greater than end value (0)
 --> tests/fail/match_range_invalid_bound.tk:4:9
  |
 4 |         10 ..= 0 => {
  |         ^
